Fixing small bugs and scrollbar

--- a/web_cooking/static/styles/style_title.css
+++ b/web_cooking/static/styles/style_title.css
@@ -15,9 +15,8 @@ pre{
 }
 .quot{
 	margin:680px 500px 20px 20px;
-
-
 }
+html { overflow:  hidden; }
 .logo{
 	left:145px;
 	top:50px;
